--- a/client/src/containers/Auth/Auth/Auth.css
+++ b/client/src/containers/Auth/Auth/Auth.css
@@ -1,12 +1,14 @@
-.auth {
+.container {
   max-width: 750px;
   margin: auto;
   display: flex;
   justify-content: center;
   padding: 40px 0; }
-  .auth__field:not(:first-child) {
-    margin-top: 10px; }
-  .auth__btn {
-    margin-top: 30px;
-    display: flex;
-    justify-content: flex-end; }
+
+.field:not(:first-child) {
+  margin-top: 10px; }
+
+.btn {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end; }
