--- a/client/src/containers/Auth/Auth/Auth.scss
+++ b/client/src/containers/Auth/Auth/Auth.scss
@@ -1,15 +1,17 @@
-.auth {
+.container {
     max-width: 750px;
     margin: auto;
     display: flex;
     justify-content: center;
     padding: 40px 0;
-    &__field:not(:first-child) {
-        margin-top: 10px;
-    }
-    &__btn {
-        margin-top: 30px;
-        display: flex;
-        justify-content: flex-end;
-    }
+}
+
+.field:not(:first-child) {
+    margin-top: 10px;
+}
+
+.btn {
+    margin-top: 30px;
+    display: flex;
+    justify-content: flex-end;
 }
