--- a/client/src/containers/Home/Home/Home.css
+++ b/client/src/containers/Home/Home/Home.css
@@ -1,18 +1,20 @@
-.home {
+.container {
   max-width: 750px;
   margin: auto;
   display: flex;
   justify-content: space-between;
   padding: 40px 0; }
-  .home__create {
-    margin-right: 40px; }
-  .home__list {
-    flex-grow: 1; }
 
-.create-item__field:not(:first-child) {
+.create {
+  margin-right: 40px; }
+
+.list {
+  flex-grow: 1; }
+
+.field:not(:first-child) {
   margin-top: 10px; }
 
-.create-item__btn {
+.btn {
   margin-top: 30px;
   display: flex;
   justify-content: flex-end; }
