--- a/client/src/containers/Auth/Auth/Auth.scss
+++ b/client/src/containers/Auth/Auth/Auth.scss
@@ -2,7 +2,7 @@
     max-width: 750px;
     margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 40px 0;
 }
 
@@ -14,4 +14,9 @@
     margin-top: 30px;
     display: flex;
     justify-content: flex-end;
+}
+
+.error {
+    max-width: 256px;
+    min-height: 54px;
 }
